name:                hkata
version:             0.1.0.0
homepage:            https://github.com/Jared-Prime/hkata#readme
author:              Jared Davis
maintainer:          jared@haiq.us
copyright:           MIT License
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HelloWorld
                       , ListKata.Extract
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hkata-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hkata
  default-language:    Haskell2010

test-suite hkata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hkata
                     , hspec
                     , hspec-discover
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Jared-Prime/hkata
